# mkscratch

./: .gitattributes  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml  release.yml
src/: main.rs  options.rs
