[package]
name = "mkscratch"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Make a .scratch directory to keep random scribbles in"
keywords = ["git", "scratch", "temp"]
license = "MIT"
homepage = "https://github.com/aslilac/mkscratch"
repository = "https://github.com/aslilac/mkscratch"
documentation = "https://docs.rs/crate/mkscratch"
edition = "2021"
