[package]
name = "mkscratch"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Make a .scratch directory to keep random scribbles in"
keywords = ["git", "scratch", "temp"]
license = "MIT"
homepage = "https://github.com/aslilac/mkscratch"
repository = "https://github.com/aslilac/mkscratch"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
colored = "2.0.0"
